# restful-PAT

./: alembic.ini  app.py  pyproject.toml
Apps/: confiq.py  modules.py
Apps/controller/: mahasiwa.py
Apps/models/: mahasiswa.py
Apps/routes/: mahasiswa.py
alembic/: env.py
alembic/versions/: a99f6c9c58e3_add_table_mahasiswa.py
